fix: remove zgc